Fixed footer alignment

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   overflow-x: hidden;
-  min-height: 100%;
+  height: 100%;
 }
 
 *,
@@ -21,9 +21,9 @@ body {
   font-style: normal;
   line-height: 1.36;
   margin: 0;
-  min-height: 100%;
   overflow-x: hidden;
   padding: 0;
+  height: 100%;
 }
 
 img {
